apps/base/dadjokes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dadjokes
spec:
  ports:
    - port: 8080
  selector:
      app: dadjokes
  type: ClusterIP
