apps/base/dadjokes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dadjokes
spec:
  ingressClassName: traefik
  rules:
    - host: dadjokes.homelab.net
      http:
        paths:
          - backend:
              service:
                name: dadjokes
                port:
                  number: 8080
            path: /
            pathType: Prefix
